sbin_PROGRAMS = ipushd
ipushd_SOURCES = worker.c wtable.c wtable.h \
utils/common.c  \
utils/common.h \
utils/db.c \
utils/db.h \
utils/logger.c \
utils/logger.h \
utils/iniparser.c \
utils/iniparser.h \
utils/mmqueue.c \
utils/mmqueue.h \
utils/mmtree64.c \
utils/mmtree64.h \
utils/mmtrie.c \
utils/mmtrie.h \
utils/mqueue.c \
utils/mqueue.h \
utils/mtree64.c \
utils/mtree64.h \
utils/mtree.c \
utils/mtree.h \
utils/mutex.c \
utils/mutex.h \
utils/xmm.c \
utils/xmm.h 
ipushd_CPPFLAGS = -I utils -D_FILE_OFFSET_BITS=64 -Wall
